# wizard-parser

./: .gitignore  CHANGE_LOG.md  CMakeLists.txt  Doxyfile.in  LICENSE.txt  Makefile  README.md  change_log.md  main.cpp  readme.md  start.sh  wizard-basic-3.pro
docs/: Doxyfile  LICENSE.txt  description.md  grammar.txt  license.txt  wizard-basic-3.txt
docs/doxygen/html/: alternation__parser_8cpp.html  alternation__parser_8hpp.html  alternation__parser_8hpp_source.html  annotated.html  assignable__parser_8cpp.html  assignable__parser_8hpp.html  assignable__parser_8hpp_source.html  ast__node_8cpp.html  ast__node_8hpp.html  ast__node_8hpp_source.html  ast__node__flag_8cpp.html  ast__node__flag_8hpp.html  ast__node__flag_8hpp_source.html  binary__parser_8cpp.html  binary__parser_8hpp.html  binary__parser_8hpp_source.html  classes.html  common_8cpp.html  common_8hpp.html  common_8hpp_source.html  concatenation__parser_8cpp.html  concatenation__parser_8hpp.html  concatenation__parser_8hpp_source.html  dir_0e8cdca62bc04c6693971f236b26614a.html  dir_1f08743542fa819d6508418bcdabbbf7.html  dir_3f59cb33ca77b8afa9cb7e595642545b.html  dir_4b301999a2a8b999751e7e139902d2d8.html  dir_6bedb738cae21d76f96135af73ff53cd.html  dir_6e4fd1e426cd04538e50fb33e55e0d3b.html  dir_8d38d1b809e4930e8576e3bd9b25c221.html  dir_acee69968bb0cedf664e41a102be1528.html  dir_b173904b4736a5b69c0431da82d76d19.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_da160d670c6378020f0eb5899c2c1f74.html  dir_e84dff02e03b0b04542df0f75fdffab1.html  dir_ec84c518a9e812a34ac48b6945d8efc3.html  dir_feb3c5958f784852a1ab9b81eabeddb3.html  dummy__parser_8cpp.html  dummy__parser_8hpp.html  dummy__parser_8hpp_source.html  (+212 more)
docs/html/: _node_8cpp.html  _node_8h.html  _node_8h_source.html  _parse_exception_8cpp.html  _parse_exception_8h.html  _parse_exception_8h_source.html  _parser_8cpp.html  _parser_8h.html  _parser_8h_source.html  _result_8h.html  _result_8h_source.html  annotated.html  classes.html  classthewizardplusplus_1_1wizard__parser_1_1parser_1_1exceptions_1_1_parse_exception-members.html  classthewizardplusplus_1_1wizard__parser_1_1parser_1_1exceptions_1_1_parse_exception.html  dir_1f08743542fa819d6508418bcdabbbf7.html  dir_4b301999a2a8b999751e7e139902d2d8.html  dir_553e4bd4eff2c18184bc8c75346d8011.html  dir_6e4fd1e426cd04538e50fb33e55e0d3b.html  dir_7ee5e8790b0aa31f58d8a9b19dd4a232.html  dir_e84dff02e03b0b04542df0f75fdffab1.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacethewizardplusplus.html  namespacethewizardplusplus_1_1wizard__parser.html  namespacethewizardplusplus_1_1wizard__parser_1_1node.html  namespacethewizardplusplus_1_1wizard__parser_1_1parser.html  (+3 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  search.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+1 more)
docs/parser-hierarchy/: assignable_parser_hierarchy.plantuml  binary_parser_hierarchy.plantuml  empty_parser_hierarchy.plantuml  match_parser_hierarchy.plantuml  not_sequential_parser.plantuml  parser_hierarchy.plantuml  sequential_parser.plantuml  token_parser_hierarchy.plantuml  wrapping_parser_hierarchy.plantuml
example/: .gitignore  CMakeLists.txt
example/docs/: LICENSE.txt  README.md  grammar.md  runtime.md
example/source/: main.cpp
example/tests/: start.bash
example/tests/common/: common.bash  io_test.bash  test_json_output.bash
example/tests/errors/: errors.bats  short.bats  verbose.bats
example/tests/evaluator/: atom.bats  evaluator.bats  expression.bats  product.bats  sum.bats  unary.bats
example/tests/lexer/: base_identifier.bats  constant_lexemes.bats  identifier.bats  number_constant.bats  whitespace.bats
example/tests/parser/: atom.bats  binary_logical_operators.bats  comparison.bats  equality.bats  expression.bats  product.bats  sum.bats  unary.bats
source/: Node.cpp  Node.h  Parser.cpp  Parser.h  Result.cpp  Result.h  main.cpp
source/parser/: Node.cpp  Node.h  Parser.cpp  Parser.h  Result.h
source/thewizardplusplus/wizard_parser/: Node.cpp  Node.h  Parser.cpp  Parser.h  Result.h  (+1 more)
test/: .gitignore  CMakeLists.txt  Makefile  main.cpp  start.sh
test/source/: main.cpp
tests/: main.cpp
tests/common/: common.cpp  common.hpp
tests/lexer/: find_matched_token.cpp  get_offset.cpp  match_lexeme.cpp  tokenize.cpp  tokenize_all.cpp  tokenize_with_exceptions.cpp
tests/parser/: alternation_parser.cpp  concatenation_parser.cpp  dummy_parser.cpp  empty_parser.cpp  exception_parser.cpp  get_offset.cpp  list_parser.cpp  lookahead_parser.cpp  match_parser.cpp  parse.cpp  parse_all.cpp  repetition_parser.cpp  typing_parser.cpp
tests/transformers/: join_sequences.cpp  remove_nothings.cpp  transform.cpp  transform_for_few_handlers.cpp
(+224 files in other folders)
