cmake_minimum_required(VERSION 3.12.2)

get_filename_component(PROJECT_NAME "${CMAKE_SOURCE_DIR}" NAME)
string(MAKE_C_IDENTIFIER "${PROJECT_NAME}" PROJECT_NAME)
project(${PROJECT_NAME} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
file(GLOB_RECURSE PROJECT_SOURCE "${PROJECT_SOURCE_DIR}/source/*.cpp")
add_executable(${PROJECT_NAME} "${PROJECT_SOURCE}")
target_link_libraries(${PROJECT_NAME} wizard_parser)
